# report-creator-ai

./: README.md  poetry.toml  pyproject.toml
api/: .gitignore  pyproject.toml
api/src/ai/: agent.py
api/src/http/: app.py
api/src/use_cases/: report_creator_cli.py
server/: .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  vercel.json
server/api/: index.py
server/migrations/: env.py
server/migrations/versions/: 3d206326f7ab_add_file_id_to_reports_table.py  697ab3f43f3d_create_user_reports_and_report_view_.py  8f9ccc96f6d5_create_users_table.py  991e41fcb7ac_create_user_reports_and_report_view_.py
server/src/: env.py
server/src/_common/: slugfy.py
server/src/ai/: agent.py  llm.py  report_writer.py  template.py
server/src/auth/: auth_bearer.py  current_user.py
server/src/contracts/: uploader.py
server/src/cryptography/: argon2_hasher.py  jwt_encrypter.py
server/src/database/: __init__.py  connection.py  models.py  paginated.py
server/src/database/models/: report_model.py  report_view_model.py  user_model.py
server/src/database/repositories/: discord_repository.py  (+4 more)
server/src/http/: app.py
server/src/repositories/: google_drive_repository.py
server/src/supabase/: supabase.py
server/src/use_cases/: authenticate_user.py  create_report.py  fetch_reports_from_user.py  register_user.py  report_creator_api.py  report_generator.py
src/: agent.py  app.py  env.py  upload.py
src/ai/: agent.py  llm.py  report_writer.py
src/contracts/: content_handler.py  uploader.py
src/http/: app.py
src/http/dtos/: upload_report_request.py  upload_report_response.py
src/repositories/: discord_repository.py  file_handler_repository.py  google_drive_repository.py
src/use_cases/: report_creator.py  report_generator.py
web/: .eslintrc.json  components.json  next.config.mjs  package.json  pnpm-lock.yaml
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/services/: authenticate-user.service.ts  fetch-reports-from-user.service.ts  register-user.service.ts  report-creator-stream.service.ts  report-creator.service.ts  upload-report.service.ts
web/src/shared/: http-client.ts  service-locator.ts
(+49 files in other folders)
